# denxi

./: .gitignore  CHANGELOG.md  INSTALL.md  Makefile  README.md  TODO.rkt  actor.rkt  analyze.rkt  archive.rkt  archiving.rkt  artifact-info.rkt  artifact.rkt  base.rkt  byte.rkt  canon.rkt  capture.rkt  catalog.rkt  cli-flag.rkt  cli.rkt  cmdline.rkt  codec.rkt  company.rkt  compile.rkt  compression.rkt  config.rkt  contract.rkt  crypto.rkt  db.rkt  dependency.rkt  dependent.rkt  derivation-forms.rkt  derivation-lang.rkt  derivation.rkt  dig.rkt  document.rkt  download.rkt  edition-info.rkt  encode.rkt  exn.rkt  file.rkt  (+104 more)
client/: capture.rkt  common.rkt  config.rkt  download.rkt  feedback.rkt  install.rkt  link.rkt  lock.rkt  main.rkt  new.rkt  recant.rkt  restore.rkt  serve.rkt  show.rkt  uninstall.rkt  update.rkt  upload.rkt
crypto/: .gitignore  CMakeLists.txt  Makefile  README.md  compile.sh  crypto.c  mingw_toolchain.cmake
crypto/x86_64-macosx/: crypto.dylib
dig/: filesystem.rkt  http.rkt  memory.rkt
docs/: eoe.txt  guide.scrbl  guide.txt  index.scrbl  scenarios.txt  shared.rkt  white-paper.scrbl  white-paper.txt
examples/: .gitignore  README.md
guide/: adding-removing.scrbl  concepts.scrbl  config.scrbl  creating-packages.scrbl  guide.scrbl  hosting-packages.scrbl  publishing-packages.scrbl  queries.scrbl  reproduction.scrbl  shared.rkt  versioning.scrbl  workspace.scrbl
integrity/: base.rkt  chf.rkt  fallback.rkt  ffi.rkt
jobs/: job.rkt  jobs.rkt  manager.rkt  messages.rkt  place.rkt  worker.rkt
l10n/: en-us.rkt  shared.rkt
pkgdef/: expand.rkt  static.rkt
private/: README  privkey.pem  pubkey.pem  test.rkt
scribblings/: specifications.scrbl  white-paper.scrbl  zcpkg.scrbl
service/: catalog.rkt  endpoint.rkt  feedback.rkt  models.rkt  path.rkt  server.rkt
signature/: base.rkt  ffi.rkt  snake-oil.rkt
source/: base.rkt  revision.rkt  (+1 more)
(+384 files in other folders)
